[metadata]
name = custom-mysql-interface-horvathi94
version = 0.0.1
author = Istvan Horvath
author_email = istvan.horvath9405@gmail.com
description = A package for managing data in MySQL database
long_description = file:README.md
long_description_content_type = text/markdown
classifiers = 
	Programing Language :: Python :: 3
	License :: 
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
